# Clinical-Notes-Classifier

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CLINICAL_NOTE_CLASSIFICATION_APPROACHES.md  CLINICAL_NOTE_CLASSIFICATION_RESULTS.md  Clinical.code-workspace  README.md  clinical_notebook.ipynb  presentation_architecture.md  pyproject.toml  requirements.txt
data/: sample_notes.txt
src/: app.py  classical_ml_app.py  classical_ml_classifier.py  compare_models.py  data_loader.py  run_all.py  run_evaluation.py  test_bert.py  test_classical_ml.py  test_dataloader.py  train.py  train_classical_ml.py  train_classical_ml_enhanced.py
