[tool.poetry]
name = "clinical-nlp"
version = "0.1.0"
description = "A project to classify clinical notes using Transformers."
authors = ["Vinay Jayadev vinayjayadev96@gmail.com	"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
transformers = "^4.52.4"
datasets = "^2.15.0"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
accelerate = "^1.7.0"
evaluate = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"