[tool.poetry]
name = "clinical-nlp"
version = "0.1.0"
description = "A project to classify clinical notes using Transformers."
authors = ["Vinay Jayadev vinayjayadev96@gmail.com	"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
transformers = "^4.52.4"
datasets = "^2.15.0"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
accelerate = "^1.7.0"
evaluate = "^0.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^23.12.0"
isort = "^5.13.0"
pre-commit = ">=3.0.0,<4.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "env",
    "results",
    "mlruns",
    "mlartifacts"
]
